[package]
name = "crash-ping-ingest"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
debugid = { version = "0.8", features = ["serde"] }
futures-util = "0.3"
log = "0.4"
memmap2 = "0.9"
reqwest = { version = "0.12", features = ["gzip", "json"] }
samply-symbols = { version = "0.23", features = ["send_futures"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
symsrv = "0.5"
tokio = { version = "1", features = ["full"] }
